--- a/.github/workflows/mergeRequests.yml
+++ b/.github/workflows/mergeRequests.yml
@@ -185,7 +185,7 @@ jobs:
         run: npx prisma migrate deploy && npx prisma db seed
       - name: Get Playwright version
         id: playwright-version
-        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').packages['node_modules/@playwright/test'].version)")" >> $GITHUB_OUTPUT
+        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').packages['node_modules/playwright'].version)")" >> $GITHUB_OUTPUT
       - name: Cache Playwright browsers
         uses: actions/cache@v4
         id: playwright-cache
@@ -194,12 +194,11 @@ jobs:
           key: ${{ runner.os }}-playwright-${{ steps.playwright-version.outputs.PLAYWRIGHT_VERSION }}-chromium-firefox
       - name: Install Playwright browsers
         if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: npx playwright install --with-deps chromium firefox
+        run: npx playwright install chromium firefox
       - name: Run E2E tests
         run: npm run test:e2e
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
-        if: ${{ failure() }}
         with:
           name: playwright-report
           path: playwright-report/
