--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "@fortawesome/free-solid-svg-icons": "7.1.0",
         "@fortawesome/react-fontawesome": "3.1.1",
         "@hookform/resolvers": "5.2.2",
-        "@prisma/client": "7.0.1",
+        "@prisma/adapter-pg": "^7.1.0",
+        "@prisma/client": "^7.1.0",
         "@react-email/html": "0.0.11",
         "@react-email/render": "2.0.0",
         "@swc/core": "1.15.3",
@@ -43,13 +44,13 @@
         "date-fns": "4.1.0",
         "dayjs": "1.11.19",
         "debounce": "2.2.0",
+        "dotenv": "^17.2.3",
         "exceljs": "4.4.0",
         "iron-session": "8.0.4",
         "jsonwebtoken": "9.0.3",
         "next": "15.5.7",
         "next-international": "1.3.1",
         "nodemailer": "7.0.11",
-        "prisma": "7.0.1",
         "react": "19.2.1",
         "react-bootstrap": "2.10.10",
         "react-date-picker": "12.0.1",
@@ -96,6 +97,7 @@
         "jest-html-reporter": "4.3.0",
         "jest-mock-extended": "^4.0.0",
         "playwright": "1.57.0",
+        "prisma": "^7.1.0",
         "ts-jest": "29.4.6",
         "ts-node": "10.9.2",
         "typescript": "5.9.3"
