--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "dayjs": "1.11.19",
         "debounce": "2.2.0",
         "exceljs": "4.4.0",
+        "ioredis": "^5.9.2",
         "iron-session": "8.0.4",
         "jsonwebtoken": "9.0.3",
         "next": "15.5.9",
@@ -83,6 +84,7 @@
         "@testing-library/react": "16.3.2",
         "@testing-library/user-event": "14.6.1",
         "@types/bcrypt": "6.0.0",
+        "@types/ioredis": "^4.28.10",
         "@types/jest": "30.0.0",
         "@types/jsonwebtoken": "9.0.10",
         "@types/node": "22.19.3",
