--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
         "eslint-plugin-jest": "29.12.1",
         "eslint-plugin-playwright": "2.5.0",
         "eslint-plugin-testing-library": "7.15.4",
+        "ioredis-mock": "^8.13.1",
         "jest": "30.2.0",
         "jest-environment-jsdom": "30.2.0",
         "jest-html-reporter": "4.3.0",
