--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
         "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "7.1.0",
-        "@fortawesome/free-regular-svg-icons": "7.1.0",
-        "@fortawesome/free-solid-svg-icons": "7.1.0",
+        "@fortawesome/fontawesome-svg-core": "7.2.0",
+        "@fortawesome/free-regular-svg-icons": "7.2.0",
+        "@fortawesome/free-solid-svg-icons": "7.2.0",
         "@fortawesome/react-fontawesome": "3.2.0",
         "@hookform/resolvers": "5.2.2",
         "@prisma/client": "6.19.1",
         "@react-email/html": "0.0.12",
         "@react-email/render": "2.0.4",
-        "@swc/core": "1.15.11",
+        "@swc/core": "1.15.17",
         "@types/react-dnd": "3.0.2",
         "bcrypt": "6.0.0",
         "bootstrap": "5.3.8",
@@ -47,20 +47,20 @@
         "exceljs": "4.4.0",
         "iron-session": "8.0.4",
         "jsonwebtoken": "9.0.3",
-        "next": "15.5.9",
+        "next": "15.5.12",
         "next-international": "1.3.1",
-        "nodemailer": "7.0.12",
-        "prisma": "6.19.1",
-        "react": "19.2.3",
+        "nodemailer": "7.0.13",
+        "prisma": "6.19.2",
+        "react": "19.2.4",
         "react-bootstrap": "2.10.10",
         "react-date-picker": "12.0.1",
         "react-dnd": "16.0.1",
         "react-dnd-html5-backend": "16.0.1",
-        "react-dom": "19.2.3",
+        "react-dom": "19.2.4",
         "react-email": "5.2.8",
-        "react-error-boundary": "6.1.0",
+        "react-error-boundary": "6.1.1",
         "react-fontawesome": "1.7.1",
-        "react-hook-form": "7.70.0",
+        "react-hook-form": "7.71.2",
         "react-toastify": "11.0.5",
         "react-tooltip": "5.30.0",
         "recharts": "^3.7.0",
@@ -69,11 +69,12 @@
         "swr": "2.4.0",
         "timers": "0.1.1",
         "usehooks-ts": "3.1.1",
+        "uuid": "^13.0.0",
         "uuidv4": "6.2.13",
         "zod": "3.25.76"
     },
     "devDependencies": {
-        "@babel/core": "7.28.6",
+        "@babel/core": "7.29.0",
         "@jest/globals": "30.2.0",
         "@swc/jest": "0.2.39",
         "@testing-library/jest-dom": "6.9.1",
@@ -82,17 +83,17 @@
         "@types/bcrypt": "6.0.0",
         "@types/jest": "30.0.0",
         "@types/jsonwebtoken": "9.0.10",
-        "@types/node": "22.19.3",
-        "@types/nodemailer": "7.0.5",
-        "@types/react": "19.2.9",
+        "@types/node": "22.19.13",
+        "@types/nodemailer": "7.0.11",
+        "@types/react": "19.2.14",
         "@types/react-dom": "19.2.3",
-        "@typescript-eslint/eslint-plugin": "8.55.0",
-        "cross-env": "^10.1.0",
-        "eslint": "9.39.2",
-        "eslint-config-next": "15.5.9",
-        "eslint-plugin-jest": "29.13.0",
-        "eslint-plugin-playwright": "2.5.1",
-        "eslint-plugin-testing-library": "7.15.4",
+        "@typescript-eslint/eslint-plugin": "8.56.1",
+        "cross-env": "10.1.0",
+        "eslint": "9.39.3",
+        "eslint-config-next": "15.5.12",
+        "eslint-plugin-jest": "29.15.0",
+        "eslint-plugin-playwright": "2.8.0",
+        "eslint-plugin-testing-library": "7.16.0",
         "jest": "30.2.0",
         "jest-environment-jsdom": "30.2.0",
         "jest-html-reporter": "4.3.0",
