--- a/.github/workflows/mergeRequests.yml
+++ b/.github/workflows/mergeRequests.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Setup database
-        run: npx prisma migrate deploy && npx prisma db seed
+        run: npx prisma generate && npx prisma migrate deploy && npx prisma db seed
       - name: Run integration tests
         run: npm run test:dal:integration
 
@@ -130,7 +130,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Setup database
-        run: npx prisma migrate deploy && npx prisma db seed
+        run: npx prisma generate && npx prisma migrate deploy && npx prisma db seed
       - name: Build application
         run: npm run build
       - name: Upload build artifacts
@@ -182,7 +182,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Setup database
-        run: npx prisma migrate deploy && npx prisma db seed
+        run: npx prisma generate && npx prisma migrate deploy && npx prisma db seed
       - name: Get Playwright version
         id: playwright-version
         run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').packages['node_modules/playwright'].version)")" >> $GITHUB_OUTPUT
