--- a/.github/workflows/mergeRequests.yml
+++ b/.github/workflows/mergeRequests.yml
@@ -75,8 +75,12 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
-      - name: Setup database
-        run: npx prisma generate && npx prisma migrate deploy && npx prisma db seed
+      - name: Generate Prisma client
+        run: npx prisma generate
+      - name: Run database migrations
+        run: npx prisma migrate deploy
+      - name: Seed database
+        run: npx prisma db seed
       - name: Run integration tests
         run: npm run test:dal:integration
 
@@ -130,8 +134,12 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
-      - name: Setup database
-        run: npx prisma generate && npx prisma migrate deploy && npx prisma db seed
+     - name: Generate Prisma client
+        run: npx prisma generate
+      - name: Run database migrations
+        run: npx prisma migrate deploy
+      - name: Seed database
+        run: npx prisma db seed
       - name: Build application
         run: npm run build
       - name: Upload build artifacts
@@ -182,8 +190,12 @@ jobs:
           name: build-files
       - name: Install dependencies
         run: npm ci
-      - name: Setup database
-        run: npx prisma generate && npx prisma migrate deploy && npx prisma db seed
+      - name: Generate Prisma client
+        run: npx prisma generate
+      - name: Run database migrations
+        run: npx prisma migrate deploy
+      - name: Seed database
+        run: npx prisma db seed
       - name: Get Playwright version
         id: playwright-version
         run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').packages['node_modules/playwright'].version)")" >> $GITHUB_OUTPUT
