--- a/.github/workflows/mergeRequests.yml
+++ b/.github/workflows/mergeRequests.yml
@@ -47,9 +47,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: "postgres://user:password@localhost:5432/vk_uniform"
-      IRON_SESSION_KEY: ${{ vars.IRON_SESSION_KEY }}
-      IRON_SESSION_COOKIE_NAME: ${{ vars.IRON_SESSION_COOKIE_NAME }}
-      REFRESH_TOKEN_KEY: ${{ vars.REFRESH_TOKEN_KEY }}
+      IRON_SESSION_KEY: "46[Hmau0uH&B]0;"m$'r1Lk;kX@I|cm@"
+      IRON_SESSION_COOKIE_NAME: "iron-session-cookie"
+      REFRESH_TOKEN_KEY: "refresh-token"
       CI: true
     services:
       postgres:
@@ -57,7 +57,6 @@ jobs:
         env:
           POSTGRES_USER: user
           POSTGRES_PASSWORD: password
-          POSTGRES_DB: vk_uniform
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -106,17 +105,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: [jest-dal-unit, jest-components, jest-dal-integration, lint]
     env:
-      DATABASE_URL: ${{ vars.DATABASE_URL }}
-      IRON_SESSION_KEY: ${{ vars.IRON_SESSION_KEY }}
-      IRON_SESSION_COOKIE_NAME: ${{ vars.IRON_SESSION_COOKIE_NAME }}
-      REFRESH_TOKEN_KEY: ${{ vars.REFRESH_TOKEN_KEY }}
+      DATABASE_URL: "postgres://user:password@localhost:5432/vk_uniform"
+      IRON_SESSION_KEY: "46[Hmau0uH&B]0;"m$'r1Lk;kX@I|cm@"
+      IRON_SESSION_COOKIE_NAME: "iron-session-cookie"
+      REFRESH_TOKEN_KEY: "refresh-token"
       CI: true
     services:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_USER: ${{ vars.DATABASE_USERNAME }}
-          POSTGRES_PASSWORD: ${{ vars.DATABASE_PASSWORD }}
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -158,17 +157,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      DATABASE_URL: ${{ vars.DATABASE_URL }}
-      IRON_SESSION_KEY: ${{ vars.IRON_SESSION_KEY }}
-      IRON_SESSION_COOKIE_NAME: ${{ vars.IRON_SESSION_COOKIE_NAME }}
-      REFRESH_TOKEN_KEY: ${{ vars.REFRESH_TOKEN_KEY }}
+      DATABASE_URL: "postgres://user:password@localhost:5432/vk_uniform"
+      IRON_SESSION_KEY: "46[Hmau0uH&B]0;"m$'r1Lk;kX@I|cm@"
+      IRON_SESSION_COOKIE_NAME: "iron-session-cookie"
+      REFRESH_TOKEN_KEY: "refresh-token"
       CI: true
     services:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_USER: ${{ vars.DATABASE_USERNAME }}
-          POSTGRES_PASSWORD: ${{ vars.DATABASE_PASSWORD }}
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
