--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "uniform-administration",
     "version": "2.6.2",
     "private": true,
+    "type": "module",
     "engines": {
         "node": "22.14.0"
     },
